Sat Jan 25 11:16:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_extract_keywords): treat nil keyword_hash same as 0,
	  for the case rb_scan_args returns nil if no keyword hash.

Fri Jan 24 15:13:20 2014  Zachary Scott  <e@zzak.io>

	* lib/racc/rdoc/grammar.en.rdoc: [DOC] Correct grammar and typos
	  Patch by Giorgos Tsiftsis [Bug #9429] [ci skip]

Thu Jan 23 20:20:17 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/envutil.rb: try to wait a bit (0.1sec) when ruby process
	  exits by signals because some SEGV tests fail because of not enough
	  error output.

Thu Jan 23 20:06:27 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: check the target thread.

Thu Jan 23 19:59:16 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: check the target thread.

Thu Jan 23 14:26:44 2014  Zachary Scott  <e@zzak.io>

	* lib/fileutils.rb: [DOC] Fix typo in options_of() example [Bug #9392]
	  Patch by Giorgos Tsiftsis

Thu Jan 23 13:56:16 2014  Zachary Scott  <e@zzak.io>

	* README -> README.md: [DOC] Format README with Markdown [Bug #9255]
	* README.ja -> README.ja.md: ditto

Wed Jan 22 15:59:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (Init_thread): ConditionVariable and Queue
	  are not able to copy.  [ruby-core:59961] [Bug #9440]

Tue Jan 21 20:14:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (rb_thread_create_timer_thread): fix for platforms
	  where PTHREAD_STACK_MIN is a dynamic value and not a compile-time
	  constant.  [ruby-dev:47911] [Bug #9436]

Tue Jan 21 17:55:09 2014  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] Use static w3.org uri [ci skip]
	  Patch by @ykzts [Fix GH-484] https://github.com/ruby/ruby/pull/484

Tue Jan 21 16:43:22 2014  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Add simple example of Enumerable#zip [ci skip]
	  Patch by @nruth on documenting-ruby/ruby#22
	  https://github.com/documenting-ruby/ruby/pull/22
